LP-71 fix rubocop errors and rewrite tickets controller helper methods

--- a/app/views/tickets/index.html.slim
+++ b/app/views/tickets/index.html.slim
@@ -5,7 +5,7 @@
 
 #all-tickets
   table
-    - tickets.each do |ticket|
+    - @tickets.each do |ticket|
       tr
         td = ticket.title
         td = link_to 'Show', ticket_path(ticket)
