LP-82 add Label through TicketLabel model

--- a/app/views/tickets/index.html.slim
+++ b/app/views/tickets/index.html.slim
@@ -1,13 +1,12 @@
 = content_for :title do
  | All Tickets
 
-= link_to 'Create ticket', new_ticket_path
-
 #all-tickets
   table
     - @tickets.each do |ticket|
       tr
-        td = ticket.title
-        td = link_to 'Show', ticket_path(ticket)
+        td = link_to "#{ticket.title}", ticket_path(ticket)
         td = link_to 'Edit', edit_ticket_path(ticket)
         td = link_to 'Destroy', ticket_path(ticket), method: :delete, data: { confirm: 'Are you sure?' }
+      tr
+        td = link_to 'Add ticket...', new_ticket_path, method: :get
